y.output
Grammaire

    0 $accept: ProgramRule $end

    1 BoolToken: TOKEN_TYPE_Bool

    2 EqualToken: TOKEN_TYPE_Equal

    3 ClosingBraceToken: TOKEN_TYPE_ClosingBrace

    4 ClosingParenthesisToken: TOKEN_TYPE_ClosingParenthesis

    5 ColonToken: TOKEN_TYPE_Colon

    6 CommaToken: TOKEN_TYPE_Comma

    7 ElseToken: TOKEN_TYPE_Else

    8 FalseToken: TOKEN_TYPE_False

    9 ForToken: TOKEN_TYPE_For

   10 FuncToken: TOKEN_TYPE_Func

   11 IdentifierToken: TOKEN_TYPE_Identifier

   12 IfToken: TOKEN_TYPE_If

   13 IntToken: TOKEN_TYPE_Int

   14 IntegerToken: TOKEN_TYPE_Integer

   15 OpeningBraceToken: TOKEN_TYPE_OpeningBrace

   16 OpeningParenthesisToken: TOKEN_TYPE_OpeningParenthesis

   17 ReadToken: TOKEN_TYPE_Read

   18 RefToken: TOKEN_TYPE_Ref

   19 ReturnToken: TOKEN_TYPE_Return

   20 SemicolonToken: TOKEN_TYPE_Semicolon

   21 ToToken: TOKEN_TYPE_To

   22 TrueToken: TOKEN_TYPE_True

   23 VarToken: TOKEN_TYPE_Var

   24 VoidToken: TOKEN_TYPE_Void

   25 WhileToken: TOKEN_TYPE_While

   26 WriteToken: TOKEN_TYPE_Write

   27 BooleanConstantRule: FalseToken
   28                    | TrueToken

   29 IntegerConstantRule: IntegerToken
   30                    | TOKEN_TYPE_Minus IntegerToken

   31 FunctionNameRule: IdentifierToken

   32 VariableNameRule: IdentifierToken

   33 FunctionTypeRule: VoidToken
   34                 | BoolToken
   35                 | IntToken

   36 VariableTypeRule: BoolToken
   37                 | IntToken

   38 FunctionArgumentRule: ExpressionRule

   39 NextFunctionArgumentRule: CommaToken FunctionArgumentListRule
   40                         | %empty

   41 FunctionArgumentListRule: FunctionArgumentRule NextFunctionArgumentRule
   42                         | %empty

   43 FunctionCallRule: FunctionNameRule OpeningParenthesisToken FunctionArgumentListRule ClosingParenthesisToken

   44 VariableExpressionRule: VariableNameRule

   45 ExpressionRule: ExpressionRule TOKEN_TYPE_Star ExpressionRule
   46               | ExpressionRule TOKEN_TYPE_Slash ExpressionRule
   47               | ExpressionRule TOKEN_TYPE_Plus ExpressionRule
   48               | ExpressionRule TOKEN_TYPE_Minus ExpressionRule
   49               | ExpressionRule TOKEN_TYPE_EqualEqual ExpressionRule
   50               | ExpressionRule TOKEN_TYPE_SmallerEqual ExpressionRule
   51               | ExpressionRule TOKEN_TYPE_Smaller ExpressionRule
   52               | TOKEN_TYPE_Not ExpressionRule
   53               | ExpressionRule TOKEN_TYPE_And ExpressionRule
   54               | ExpressionRule TOKEN_TYPE_Or ExpressionRule
   55               | BooleanConstantRule
   56               | IntegerConstantRule
   57               | OpeningParenthesisToken ExpressionRule ClosingParenthesisToken
   58               | FunctionCallRule
   59               | VariableExpressionRule

   60 FunctionParameterRule: RefToken VariableNameRule ColonToken VariableTypeRule
   61                      | VariableNameRule ColonToken VariableTypeRule

   62 NextFunctionParameterRule: CommaToken FunctionParameterListRule
   63                          | %empty

   64 FunctionParameterListRule: FunctionParameterRule NextFunctionParameterRule
   65                          | %empty

   66 VariableRule: VariableNameRule ColonToken VariableTypeRule

   67 NextVariableRule: CommaToken VariableListRule
   68                 | %empty

   69 VariableListRule: VariableRule NextVariableRule

   70 VariableDeclarationRule: VarToken VariableRule NextVariableRule SemicolonToken

   71 LocalDeclarationRule: VariableDeclarationRule
   72                     | FunctionDeclarationRule

   73 LocalDeclarationListRule: LocalDeclarationRule LocalDeclarationListRule
   74                         | %empty

   75 AssignmentStatementRule: VariableExpressionRule EqualToken ExpressionRule SemicolonToken

   76 ElseStatementRule: ElseToken OpeningBraceToken StatementListRule ClosingBraceToken
   77                  | %empty

   78 IfStatementRule: IfToken ExpressionRule OpeningBraceToken StatementListRule ClosingBraceToken ElseStatementRule

   79 WhileStatementRule: WhileToken ExpressionRule OpeningBraceToken StatementListRule ClosingBraceToken

   80 ForStatementRule: ForToken VariableExpressionRule EqualToken ExpressionRule ToToken ExpressionRule OpeningBraceToken StatementListRule ClosingBraceToken

   81 WriteStatementRule: WriteToken ExpressionRule SemicolonToken

   82 ReadStatementRule: ReadToken VariableExpressionRule SemicolonToken

   83 ReturnStatementRule: ReturnToken ExpressionRule SemicolonToken

   84 ExpressionStatementRule: ExpressionRule SemicolonToken

   85 StatementRule: AssignmentStatementRule
   86              | IfStatementRule
   87              | WhileStatementRule
   88              | ForStatementRule
   89              | WriteStatementRule
   90              | ReadStatementRule
   91              | ReturnStatementRule
   92              | ExpressionStatementRule

   93 StatementListRule: StatementRule StatementListRule
   94                  | %empty

   95 FunctionBlockRule: OpeningBraceToken LocalDeclarationListRule StatementListRule ClosingBraceToken
   96                  | SemicolonToken

   97 FunctionDeclarationRule: FuncToken FunctionNameRule OpeningParenthesisToken FunctionParameterListRule ClosingParenthesisToken ColonToken FunctionTypeRule FunctionBlockRule

   98 ProgramRule: FunctionDeclarationRule


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
TOKEN_TYPE_And (258) 53
TOKEN_TYPE_Bool (259) 1
TOKEN_TYPE_Colon (260) 5
TOKEN_TYPE_Comma (261) 6
TOKEN_TYPE_Else (262) 7
TOKEN_TYPE_ClosingBrace (263) 3
TOKEN_TYPE_ClosingParenthesis (264) 4
TOKEN_TYPE_Equal (265) 2
TOKEN_TYPE_EqualEqual (266) 49
TOKEN_TYPE_False (267) 8
TOKEN_TYPE_For (268) 9
TOKEN_TYPE_Func (269) 10
TOKEN_TYPE_Identifier (270) 11
TOKEN_TYPE_If (271) 12
TOKEN_TYPE_Int (272) 13
TOKEN_TYPE_Minus (273) 30 48
TOKEN_TYPE_Integer (274) 14
TOKEN_TYPE_Not (275) 52
TOKEN_TYPE_OpeningBrace (276) 15
TOKEN_TYPE_OpeningParenthesis (277) 16
TOKEN_TYPE_Or (278) 54
TOKEN_TYPE_Plus (279) 47
TOKEN_TYPE_Read (280) 17
TOKEN_TYPE_Ref (281) 18
TOKEN_TYPE_Return (282) 19
TOKEN_TYPE_Semicolon (283) 20
TOKEN_TYPE_Slash (284) 46
TOKEN_TYPE_SmallerEqual (285) 50
TOKEN_TYPE_Smaller (286) 51
TOKEN_TYPE_Star (287) 45
TOKEN_TYPE_To (288) 21
TOKEN_TYPE_True (289) 22
TOKEN_TYPE_Var (290) 23
TOKEN_TYPE_Void (291) 24
TOKEN_TYPE_While (292) 25
TOKEN_TYPE_Write (293) 26


Non-terminaux, suivis des règles où ils apparaissent

$accept (39)
    à gauche: 0
BoolToken (40)
    à gauche: 1, à droite: 34 36
EqualToken (41)
    à gauche: 2, à droite: 75 80
ClosingBraceToken (42)
    à gauche: 3, à droite: 76 78 79 80 95
ClosingParenthesisToken (43)
    à gauche: 4, à droite: 43 57 97
ColonToken (44)
    à gauche: 5, à droite: 60 61 66 97
CommaToken (45)
    à gauche: 6, à droite: 39 62 67
ElseToken (46)
    à gauche: 7, à droite: 76
FalseToken (47)
    à gauche: 8, à droite: 27
ForToken (48)
    à gauche: 9, à droite: 80
FuncToken (49)
    à gauche: 10, à droite: 97
IdentifierToken (50)
    à gauche: 11, à droite: 31 32
IfToken (51)
    à gauche: 12, à droite: 78
IntToken (52)
    à gauche: 13, à droite: 35 37
IntegerToken (53)
    à gauche: 14, à droite: 29 30
OpeningBraceToken (54)
    à gauche: 15, à droite: 76 78 79 80 95
OpeningParenthesisToken (55)
    à gauche: 16, à droite: 43 57 97
ReadToken (56)
    à gauche: 17, à droite: 82
RefToken (57)
    à gauche: 18, à droite: 60
ReturnToken (58)
    à gauche: 19, à droite: 83
SemicolonToken (59)
    à gauche: 20, à droite: 70 75 81 82 83 84 96
ToToken (60)
    à gauche: 21, à droite: 80
TrueToken (61)
    à gauche: 22, à droite: 28
VarToken (62)
    à gauche: 23, à droite: 70
VoidToken (63)
    à gauche: 24, à droite: 33
WhileToken (64)
    à gauche: 25, à droite: 79
WriteToken (65)
    à gauche: 26, à droite: 81
BooleanConstantRule (66)
    à gauche: 27 28, à droite: 55
IntegerConstantRule (67)
    à gauche: 29 30, à droite: 56
FunctionNameRule (68)
    à gauche: 31, à droite: 43 97
VariableNameRule (69)
    à gauche: 32, à droite: 44 60 61 66
FunctionTypeRule (70)
    à gauche: 33 34 35, à droite: 97
VariableTypeRule (71)
    à gauche: 36 37, à droite: 60 61 66
FunctionArgumentRule (72)
    à gauche: 38, à droite: 41
NextFunctionArgumentRule (73)
    à gauche: 39 40, à droite: 41
FunctionArgumentListRule (74)
    à gauche: 41 42, à droite: 39 43
FunctionCallRule (75)
    à gauche: 43, à droite: 58
VariableExpressionRule (76)
    à gauche: 44, à droite: 59 75 80 82
ExpressionRule (77)
    à gauche: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59, à droite:
    38 45 46 47 48 49 50 51 52 53 54 57 75 78 79 80 81 83 84
FunctionParameterRule (78)
    à gauche: 60 61, à droite: 64
NextFunctionParameterRule (79)
    à gauche: 62 63, à droite: 64
FunctionParameterListRule (80)
    à gauche: 64 65, à droite: 62 97
VariableRule (81)
    à gauche: 66, à droite: 69 70
NextVariableRule (82)
    à gauche: 67 68, à droite: 69 70
VariableListRule (83)
    à gauche: 69, à droite: 67
VariableDeclarationRule (84)
    à gauche: 70, à droite: 71
LocalDeclarationRule (85)
    à gauche: 71 72, à droite: 73
LocalDeclarationListRule (86)
    à gauche: 73 74, à droite: 73 95
AssignmentStatementRule (87)
    à gauche: 75, à droite: 85
ElseStatementRule (88)
    à gauche: 76 77, à droite: 78
IfStatementRule (89)
    à gauche: 78, à droite: 86
WhileStatementRule (90)
    à gauche: 79, à droite: 87
ForStatementRule (91)
    à gauche: 80, à droite: 88
WriteStatementRule (92)
    à gauche: 81, à droite: 89
ReadStatementRule (93)
    à gauche: 82, à droite: 90
ReturnStatementRule (94)
    à gauche: 83, à droite: 91
ExpressionStatementRule (95)
    à gauche: 84, à droite: 92
StatementRule (96)
    à gauche: 85 86 87 88 89 90 91 92, à droite: 93
StatementListRule (97)
    à gauche: 93 94, à droite: 76 78 79 80 93 95
FunctionBlockRule (98)
    à gauche: 95 96, à droite: 97
FunctionDeclarationRule (99)
    à gauche: 97, à droite: 72 98
ProgramRule (100)
    à gauche: 98, à droite: 0


État 0

    0 $accept: . ProgramRule $end
   10 FuncToken: . TOKEN_TYPE_Func
   97 FunctionDeclarationRule: . FuncToken FunctionNameRule OpeningParenthesisToken FunctionParameterListRule ClosingParenthesisToken ColonToken FunctionTypeRule FunctionBlockRule
   98 ProgramRule: . FunctionDeclarationRule

    TOKEN_TYPE_Func  décalage et aller à l'état 1

    FuncToken                aller à l'état 2
    FunctionDeclarationRule  aller à l'état 3
    ProgramRule              aller à l'état 4


État 1

   10 FuncToken: TOKEN_TYPE_Func .

    $défaut  réduction par utilisation de la règle 10 (FuncToken)


État 2

   11 IdentifierToken: . TOKEN_TYPE_Identifier
   31 FunctionNameRule: . IdentifierToken
   97 FunctionDeclarationRule: FuncToken . FunctionNameRule OpeningParenthesisToken FunctionParameterListRule ClosingParenthesisToken ColonToken FunctionTypeRule FunctionBlockRule

    TOKEN_TYPE_Identifier  décalage et aller à l'état 5

    IdentifierToken   aller à l'état 6
    FunctionNameRule  aller à l'état 7


État 3

   98 ProgramRule: FunctionDeclarationRule .

    $défaut  réduction par utilisation de la règle 98 (ProgramRule)


État 4

    0 $accept: ProgramRule . $end

    $end  décalage et aller à l'état 8


État 5

   11 IdentifierToken: TOKEN_TYPE_Identifier .

    $défaut  réduction par utilisation de la règle 11 (IdentifierToken)


État 6

   31 FunctionNameRule: IdentifierToken .

    $défaut  réduction par utilisation de la règle 31 (FunctionNameRule)


État 7

   16 OpeningParenthesisToken: . TOKEN_TYPE_OpeningParenthesis
   97 FunctionDeclarationRule: FuncToken FunctionNameRule . OpeningParenthesisToken FunctionParameterListRule ClosingParenthesisToken ColonToken FunctionTypeRule FunctionBlockRule

    TOKEN_TYPE_OpeningParenthesis  décalage et aller à l'état 9

    OpeningParenthesisToken  aller à l'état 10


État 8

    0 $accept: ProgramRule $end .

    $défaut  accepter


État 9

   16 OpeningParenthesisToken: TOKEN_TYPE_OpeningParenthesis .

    $défaut  réduction par utilisation de la règle 16 (OpeningParenthesisToken)


État 10

   11 IdentifierToken: . TOKEN_TYPE_Identifier
   18 RefToken: . TOKEN_TYPE_Ref
   32 VariableNameRule: . IdentifierToken
   60 FunctionParameterRule: . RefToken VariableNameRule ColonToken VariableTypeRule
   61                      | . VariableNameRule ColonToken VariableTypeRule
   64 FunctionParameterListRule: . FunctionParameterRule NextFunctionParameterRule
   65                          | . %empty  [TOKEN_TYPE_ClosingParenthesis]
   97 FunctionDeclarationRule: FuncToken FunctionNameRule OpeningParenthesisToken . FunctionParameterListRule ClosingParenthesisToken ColonToken FunctionTypeRule FunctionBlockRule

    TOKEN_TYPE_Identifier  décalage et aller à l'état 5
    TOKEN_TYPE_Ref         décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 65 (FunctionParameterListRule)

    IdentifierToken            aller à l'état 12
    RefToken                   aller à l'état 13
    VariableNameRule           aller à l'état 14
    FunctionParameterRule      aller à l'état 15
    FunctionParameterListRule  aller à l'état 16


État 11

   18 RefToken: TOKEN_TYPE_Ref .

    $défaut  réduction par utilisation de la règle 18 (RefToken)


État 12

   32 VariableNameRule: IdentifierToken .

    $défaut  réduction par utilisation de la règle 32 (VariableNameRule)


État 13

   11 IdentifierToken: . TOKEN_TYPE_Identifier
   32 VariableNameRule: . IdentifierToken
   60 FunctionParameterRule: RefToken . VariableNameRule ColonToken VariableTypeRule

    TOKEN_TYPE_Identifier  décalage et aller à l'état 5

    IdentifierToken   aller à l'état 12
    VariableNameRule  aller à l'état 17


État 14

    5 ColonToken: . TOKEN_TYPE_Colon
   61 FunctionParameterRule: VariableNameRule . ColonToken VariableTypeRule

    TOKEN_TYPE_Colon  décalage et aller à l'état 18

    ColonToken  aller à l'état 19


État 15

    6 CommaToken: . TOKEN_TYPE_Comma
   62 NextFunctionParameterRule: . CommaToken FunctionParameterListRule
   63                          | . %empty  [TOKEN_TYPE_ClosingParenthesis]
   64 FunctionParameterListRule: FunctionParameterRule . NextFunctionParameterRule

    TOKEN_TYPE_Comma  décalage et aller à l'état 20

    $défaut  réduction par utilisation de la règle 63 (NextFunctionParameterRule)

    CommaToken                 aller à l'état 21
    NextFunctionParameterRule  aller à l'état 22


État 16

    4 ClosingParenthesisToken: . TOKEN_TYPE_ClosingParenthesis
   97 FunctionDeclarationRule: FuncToken FunctionNameRule OpeningParenthesisToken FunctionParameterListRule . ClosingParenthesisToken ColonToken FunctionTypeRule FunctionBlockRule

    TOKEN_TYPE_ClosingParenthesis  décalage et aller à l'état 23

    ClosingParenthesisToken  aller à l'état 24


État 17

    5 ColonToken: . TOKEN_TYPE_Colon
   60 FunctionParameterRule: RefToken VariableNameRule . ColonToken VariableTypeRule

    TOKEN_TYPE_Colon  décalage et aller à l'état 18

    ColonToken  aller à l'état 25


État 18

    5 ColonToken: TOKEN_TYPE_Colon .

    $défaut  réduction par utilisation de la règle 5 (ColonToken)


État 19

    1 BoolToken: . TOKEN_TYPE_Bool
   13 IntToken: . TOKEN_TYPE_Int
   36 VariableTypeRule: . BoolToken
   37                 | . IntToken
   61 FunctionParameterRule: VariableNameRule ColonToken . VariableTypeRule

    TOKEN_TYPE_Bool  décalage et aller à l'état 26
    TOKEN_TYPE_Int   décalage et aller à l'état 27

    BoolToken         aller à l'état 28
    IntToken          aller à l'état 29
    VariableTypeRule  aller à l'état 30


État 20

    6 CommaToken: TOKEN_TYPE_Comma .

    $défaut  réduction par utilisation de la règle 6 (CommaToken)


État 21

   11 IdentifierToken: . TOKEN_TYPE_Identifier
   18 RefToken: . TOKEN_TYPE_Ref
   32 VariableNameRule: . IdentifierToken
   60 FunctionParameterRule: . RefToken VariableNameRule ColonToken VariableTypeRule
   61                      | . VariableNameRule ColonToken VariableTypeRule
   62 NextFunctionParameterRule: CommaToken . FunctionParameterListRule
   64 FunctionParameterListRule: . FunctionParameterRule NextFunctionParameterRule
   65                          | . %empty  [TOKEN_TYPE_ClosingParenthesis]

    TOKEN_TYPE_Identifier  décalage et aller à l'état 5
    TOKEN_TYPE_Ref         décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 65 (FunctionParameterListRule)

    IdentifierToken            aller à l'état 12
    RefToken                   aller à l'état 13
    VariableNameRule           aller à l'état 14
    FunctionParameterRule      aller à l'état 15
    FunctionParameterListRule  aller à l'état 31


État 22

   64 FunctionParameterListRule: FunctionParameterRule NextFunctionParameterRule .

    $défaut  réduction par utilisation de la règle 64 (FunctionParameterListRule)


État 23

    4 ClosingParenthesisToken: TOKEN_TYPE_ClosingParenthesis .

    $défaut  réduction par utilisation de la règle 4 (ClosingParenthesisToken)


État 24

    5 ColonToken: . TOKEN_TYPE_Colon
   97 FunctionDeclarationRule: FuncToken FunctionNameRule OpeningParenthesisToken FunctionParameterListRule ClosingParenthesisToken . ColonToken FunctionTypeRule FunctionBlockRule

    TOKEN_TYPE_Colon  décalage et aller à l'état 18

    ColonToken  aller à l'état 32


État 25

    1 BoolToken: . TOKEN_TYPE_Bool
   13 IntToken: . TOKEN_TYPE_Int
   36 VariableTypeRule: . BoolToken
   37                 | . IntToken
   60 FunctionParameterRule: RefToken VariableNameRule ColonToken . VariableTypeRule

    TOKEN_TYPE_Bool  décalage et aller à l'état 26
    TOKEN_TYPE_Int   décalage et aller à l'état 27

    BoolToken         aller à l'état 28
    IntToken          aller à l'état 29
    VariableTypeRule  aller à l'état 33


État 26

    1 BoolToken: TOKEN_TYPE_Bool .

    $défaut  réduction par utilisation de la règle 1 (BoolToken)


État 27

   13 IntToken: TOKEN_TYPE_Int .

    $défaut  réduction par utilisation de la règle 13 (IntToken)


État 28

   36 VariableTypeRule: BoolToken .

    $défaut  réduction par utilisation de la règle 36 (VariableTypeRule)


État 29

   37 VariableTypeRule: IntToken .

    $défaut  réduction par utilisation de la règle 37 (VariableTypeRule)


État 30

   61 FunctionParameterRule: VariableNameRule ColonToken VariableTypeRule .

    $défaut  réduction par utilisation de la règle 61 (FunctionParameterRule)


État 31

   62 NextFunctionParameterRule: CommaToken FunctionParameterListRule .

    $défaut  réduction par utilisation de la règle 62 (NextFunctionParameterRule)


État 32

    1 BoolToken: . TOKEN_TYPE_Bool
   13 IntToken: . TOKEN_TYPE_Int
   24 VoidToken: . TOKEN_TYPE_Void
   33 FunctionTypeRule: . VoidToken
   34                 | . BoolToken
   35                 | . IntToken
   97 FunctionDeclarationRule: FuncToken FunctionNameRule OpeningParenthesisToken FunctionParameterListRule ClosingParenthesisToken ColonToken . FunctionTypeRule FunctionBlockRule

    TOKEN_TYPE_Bool  décalage et aller à l'état 26
    TOKEN_TYPE_Int   décalage et aller à l'état 27
    TOKEN_TYPE_Void  décalage et aller à l'état 34

    BoolToken         aller à l'état 35
    IntToken          aller à l'état 36
    VoidToken         aller à l'état 37
    FunctionTypeRule  aller à l'état 38


État 33

   60 FunctionParameterRule: RefToken VariableNameRule ColonToken VariableTypeRule .

    $défaut  réduction par utilisation de la règle 60 (FunctionParameterRule)


État 34

   24 VoidToken: TOKEN_TYPE_Void .

    $défaut  réduction par utilisation de la règle 24 (VoidToken)


État 35

   34 FunctionTypeRule: BoolToken .

    $défaut  réduction par utilisation de la règle 34 (FunctionTypeRule)


État 36

   35 FunctionTypeRule: IntToken .

    $défaut  réduction par utilisation de la règle 35 (FunctionTypeRule)


État 37

   33 FunctionTypeRule: VoidToken .

    $défaut  réduction par utilisation de la règle 33 (FunctionTypeRule)


État 38

   15 OpeningBraceToken: . TOKEN_TYPE_OpeningBrace
   20 SemicolonToken: . TOKEN_TYPE_Semicolon
   95 FunctionBlockRule: . OpeningBraceToken LocalDeclarationListRule StatementListRule ClosingBraceToken
   96                  | . SemicolonToken
   97 FunctionDeclarationRule: FuncToken FunctionNameRule OpeningParenthesisToken FunctionParameterListRule ClosingParenthesisToken ColonToken FunctionTypeRule . FunctionBlockRule

    TOKEN_TYPE_OpeningBrace  décalage et aller à l'état 39
    TOKEN_TYPE_Semicolon     décalage et aller à l'état 40

    OpeningBraceToken  aller à l'état 41
    SemicolonToken     aller à l'état 42
    FunctionBlockRule  aller à l'état 43


État 39

   15 OpeningBraceToken: TOKEN_TYPE_OpeningBrace .

    $défaut  réduction par utilisation de la règle 15 (OpeningBraceToken)


État 40

   20 SemicolonToken: TOKEN_TYPE_Semicolon .

    $défaut  réduction par utilisation de la règle 20 (SemicolonToken)


État 41

   10 FuncToken: . TOKEN_TYPE_Func
   23 VarToken: . TOKEN_TYPE_Var
   70 VariableDeclarationRule: . VarToken VariableRule NextVariableRule SemicolonToken
   71 LocalDeclarationRule: . VariableDeclarationRule
   72                     | . FunctionDeclarationRule
   73 LocalDeclarationListRule: . LocalDeclarationRule LocalDeclarationListRule
   74                         | . %empty  [TOKEN_TYPE_ClosingBrace, TOKEN_TYPE_False, TOKEN_TYPE_For, TOKEN_TYPE_Identifier, TOKEN_TYPE_If, TOKEN_TYPE_Minus, TOKEN_TYPE_Integer, TOKEN_TYPE_Not, TOKEN_TYPE_OpeningParenthesis, TOKEN_TYPE_Read, TOKEN_TYPE_Return, TOKEN_TYPE_True, TOKEN_TYPE_While, TOKEN_TYPE_Write]
   95 FunctionBlockRule: OpeningBraceToken . LocalDeclarationListRule StatementListRule ClosingBraceToken
   97 FunctionDeclarationRule: . FuncToken FunctionNameRule OpeningParenthesisToken FunctionParameterListRule ClosingParenthesisToken ColonToken FunctionTypeRule FunctionBlockRule

    TOKEN_TYPE_Func  décalage et aller à l'état 1
    TOKEN_TYPE_Var   décalage et aller à l'état 44

    $défaut  réduction par utilisation de la règle 74 (LocalDeclarationListRule)

    FuncToken                 aller à l'état 2
    VarToken                  aller à l'état 45
    VariableDeclarationRule   aller à l'état 46
    LocalDeclarationRule      aller à l'état 47
    LocalDeclarationListRule  aller à l'état 48
    FunctionDeclarationRule   aller à l'état 49


État 42

   96 FunctionBlockRule: SemicolonToken .

    $défaut  réduction par utilisation de la règle 96 (FunctionBlockRule)


État 43

   97 FunctionDeclarationRule: FuncToken FunctionNameRule OpeningParenthesisToken FunctionParameterListRule ClosingParenthesisToken ColonToken FunctionTypeRule FunctionBlockRule .

    $défaut  réduction par utilisation de la règle 97 (FunctionDeclarationRule)


État 44

   23 VarToken: TOKEN_TYPE_Var .

    $défaut  réduction par utilisation de la règle 23 (VarToken)


État 45

   11 IdentifierToken: . TOKEN_TYPE_Identifier
   32 VariableNameRule: . IdentifierToken
   66 VariableRule: . VariableNameRule ColonToken VariableTypeRule
   70 VariableDeclarationRule: VarToken . VariableRule NextVariableRule SemicolonToken

    TOKEN_TYPE_Identifier  décalage et aller à l'état 5

    IdentifierToken   aller à l'état 12
    VariableNameRule  aller à l'état 50
    VariableRule      aller à l'état 51


État 46

   71 LocalDeclarationRule: VariableDeclarationRule .

    $défaut  réduction par utilisation de la règle 71 (LocalDeclarationRule)


État 47

   10 FuncToken: . TOKEN_TYPE_Func
   23 VarToken: . TOKEN_TYPE_Var
   70 VariableDeclarationRule: . VarToken VariableRule NextVariableRule SemicolonToken
   71 LocalDeclarationRule: . VariableDeclarationRule
   72                     | . FunctionDeclarationRule
   73 LocalDeclarationListRule: . LocalDeclarationRule LocalDeclarationListRule
   73                         | LocalDeclarationRule . LocalDeclarationListRule
   74                         | . %empty  [TOKEN_TYPE_ClosingBrace, TOKEN_TYPE_False, TOKEN_TYPE_For, TOKEN_TYPE_Identifier, TOKEN_TYPE_If, TOKEN_TYPE_Minus, TOKEN_TYPE_Integer, TOKEN_TYPE_Not, TOKEN_TYPE_OpeningParenthesis, TOKEN_TYPE_Read, TOKEN_TYPE_Return, TOKEN_TYPE_True, TOKEN_TYPE_While, TOKEN_TYPE_Write]
   97 FunctionDeclarationRule: . FuncToken FunctionNameRule OpeningParenthesisToken FunctionParameterListRule ClosingParenthesisToken ColonToken FunctionTypeRule FunctionBlockRule

    TOKEN_TYPE_Func  décalage et aller à l'état 1
    TOKEN_TYPE_Var   décalage et aller à l'état 44

    $défaut  réduction par utilisation de la règle 74 (LocalDeclarationListRule)

    FuncToken                 aller à l'état 2
    VarToken                  aller à l'état 45
    VariableDeclarationRule   aller à l'état 46
    LocalDeclarationRule      aller à l'état 47
    LocalDeclarationListRule  aller à l'état 52
    FunctionDeclarationRule   aller à l'état 49


État 48

    8 FalseToken: . TOKEN_TYPE_False
    9 ForToken: . TOKEN_TYPE_For
   11 IdentifierToken: . TOKEN_TYPE_Identifier
   12 IfToken: . TOKEN_TYPE_If
   14 IntegerToken: . TOKEN_TYPE_Integer
   16 OpeningParenthesisToken: . TOKEN_TYPE_OpeningParenthesis
   17 ReadToken: . TOKEN_TYPE_Read
   19 ReturnToken: . TOKEN_TYPE_Return
   22 TrueToken: . TOKEN_TYPE_True
   25 WhileToken: . TOKEN_TYPE_While
   26 WriteToken: . TOKEN_TYPE_Write
   27 BooleanConstantRule: . FalseToken
   28                    | . TrueToken
   29 IntegerConstantRule: . IntegerToken
   30                    | . TOKEN_TYPE_Minus IntegerToken
   31 FunctionNameRule: . IdentifierToken
   32 VariableNameRule: . IdentifierToken
   43 FunctionCallRule: . FunctionNameRule OpeningParenthesisToken FunctionArgumentListRule ClosingParenthesisToken
   44 VariableExpressionRule: . VariableNameRule
   45 ExpressionRule: . ExpressionRule TOKEN_TYPE_Star ExpressionRule
   46               | . ExpressionRule TOKEN_TYPE_Slash ExpressionRule
   47               | . ExpressionRule TOKEN_TYPE_Plus ExpressionRule
   48               | . ExpressionRule TOKEN_TYPE_Minus ExpressionRule
   49               | . ExpressionRule TOKEN_TYPE_EqualEqual ExpressionRule
   50               | . ExpressionRule TOKEN_TYPE_SmallerEqual ExpressionRule
   51               | . ExpressionRule TOKEN_TYPE_Smaller ExpressionRule
   52               | . TOKEN_TYPE_Not ExpressionRule
   53               | . ExpressionRule TOKEN_TYPE_And ExpressionRule
   54               | . ExpressionRule TOKEN_TYPE_Or ExpressionRule
   55               | . BooleanConstantRule
   56               | . IntegerConstantRule
   57               | . OpeningParenthesisToken ExpressionRule ClosingParenthesisToken
   58               | . FunctionCallRule
   59               | . VariableExpressionRule
   75 AssignmentStatementRule: . VariableExpressionRule EqualToken ExpressionRule SemicolonToken
   78 IfStatementRule: . IfToken ExpressionRule OpeningBraceToken StatementListRule ClosingBraceToken ElseStatementRule
   79 WhileStatementRule: . WhileToken ExpressionRule OpeningBraceToken StatementListRule ClosingBraceToken
   80 ForStatementRule: . ForToken VariableExpressionRule EqualToken ExpressionRule ToToken ExpressionRule OpeningBraceToken StatementListRule ClosingBraceToken
   81 WriteStatementRule: . WriteToken ExpressionRule SemicolonToken
   82 ReadStatementRule: . ReadToken VariableExpressionRule SemicolonToken
   83 ReturnStatementRule: . ReturnToken ExpressionRule SemicolonToken
   84 ExpressionStatementRule: . ExpressionRule SemicolonToken
   85 StatementRule: . AssignmentStatementRule
   86              | . IfStatementRule
   87              | . WhileStatementRule
   88              | . ForStatementRule
   89              | . WriteStatementRule
   90              | . ReadStatementRule
   91              | . ReturnStatementRule
   92              | . ExpressionStatementRule
   93 StatementListRule: . StatementRule StatementListRule
   94                  | . %empty  [TOKEN_TYPE_ClosingBrace]
   95 FunctionBlockRule: OpeningBraceToken LocalDeclarationListRule . StatementListRule ClosingBraceToken

    TOKEN_TYPE_False               décalage et aller à l'état 53
    TOKEN_TYPE_For                 décalage et aller à l'état 54
    TOKEN_TYPE_Identifier          décalage et aller à l'état 5
    TOKEN_TYPE_If                  décalage et aller à l'état 55
    TOKEN_TYPE_Minus               décalage et aller à l'état 56
    TOKEN_TYPE_Integer             décalage et aller à l'état 57
    TOKEN_TYPE_Not                 décalage et aller à l'état 58
    TOKEN_TYPE_OpeningParenthesis  décalage et aller à l'état 9
    TOKEN_TYPE_Read                décalage et aller à l'état 59
    TOKEN_TYPE_Return              décalage et aller à l'état 60
    TOKEN_TYPE_True                décalage et aller à l'état 61
    TOKEN_TYPE_While               décalage et aller à l'état 62
    TOKEN_TYPE_Write               décalage et aller à l'état 63

    $défaut  réduction par utilisation de la règle 94 (StatementListRule)

    FalseToken               aller à l'état 64
    ForToken                 aller à l'état 65
    IdentifierToken          aller à l'état 66
    IfToken                  aller à l'état 67
    IntegerToken             aller à l'état 68
    OpeningParenthesisToken  aller à l'état 69
    ReadToken                aller à l'état 70
    ReturnToken              aller à l'état 71
    TrueToken                aller à l'état 72
    WhileToken               aller à l'état 73
    WriteToken               aller à l'état 74
    BooleanConstantRule      aller à l'état 75
    IntegerConstantRule      aller à l'état 76
    FunctionNameRule         aller à l'état 77
    VariableNameRule         aller à l'état 78
    FunctionCallRule         aller à l'état 79
    VariableExpressionRule   aller à l'état 80
    ExpressionRule           aller à l'état 81
    AssignmentStatementRule  aller à l'état 82
    IfStatementRule          aller à l'état 83
    WhileStatementRule       aller à l'état 84
    ForStatementRule         aller à l'état 85
    WriteStatementRule       aller à l'état 86
    ReadStatementRule        aller à l'état 87
    ReturnStatementRule      aller à l'état 88
    ExpressionStatementRule  aller à l'état 89
    StatementRule            aller à l'état 90
    StatementListRule        aller à l'état 91


État 49

   72 LocalDeclarationRule: FunctionDeclarationRule .

    $défaut  réduction par utilisation de la règle 72 (LocalDeclarationRule)


État 50

    5 ColonToken: . TOKEN_TYPE_Colon
   66 VariableRule: VariableNameRule . ColonToken VariableTypeRule

    TOKEN_TYPE_Colon  décalage et aller à l'état 18
